# document_search_pdf

./: .gitignore  README.md  TROUBLESHOOT_CONNECTION.md  config.yaml  delete_documents.py  docker-compose.yml  load_pubmed_data.py  mkdocs.yml  pyproject.toml  quick_start.sh  requirements.txt  run_apps.sh  run_enhanced_app.sh  sample.env  setup.py  view_qdrant.py
apps/: pdf_manager_app.py  streamlit_pubmed_app.py  streamlit_upload_app.py  streamlit_upload_app_enhanced.py
archive/: cli.py  demo_local_qdrant.py  enhanced_rag.py  process_documents.py  query_enhanced_rag.py  quick_test.py  use_local_qdrant.py
config/: pdf_config.yaml
docs/: ACTION_PLAN.md  ADVANCED_CHUNKING_COMPLETE.md  BATCH_UPLOAD_GUIDE.md  CHUNKING_QUICK_REFERENCE.md  CHUNKING_STRATEGIES_GUIDE.md  CHUNKING_STRATEGIES_SUMMARY.md  CHUNKING_VISUAL_COMPARISON.md  CRITICAL_FIX_REINDEX_REQUIRED.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_STRUCTURE.md  DOCUMENT_CLEANING_GUIDE.md  DOCUMENT_CLEANING_SUMMARY.md  FILE_DOCUMENTATION.md  INSTALLATION_CHUNKING.md  PROJECT_STRUCTURE.md  QDRANT_LOCAL_GUIDE.md  QDRANT_QUICK_START.md  QUICK_START.md  README.md  README_ENHANCED.md  RUN_ENHANCED_APP.md  SEARCH_RESULTS_FIX.md  SETUP_COMPLETE.md  START_HERE.md  STREAMLIT_INTEGRATION_SUMMARY.md  TIMEOUT_AND_DUPLICATE_FIX.md  TRIPLE_HYBRID_CHUNKING.md  UNUSED_CODE_REPORT.md  index.md
docs/architecture/: base-rag.md  enhanced-rag.md  system-architecture.md
docs/archive_readmes/: README_PDF.md  README_PDF_UPLOAD.md
docs/development/: cleanup-summary.md  mkdocs-guide.md  testing-with-uv.md  testing.md
docs/getting-started/: how-to-run.md  install-tesseract.md  installation.md  load-pubmed-index.md
docs/troubleshooting/: fix-summary.md  fixes-summary.md
docs/user-guide/: new-layout.md  pdf-manager.md  search-features.md  streamlit-apps.md
examples/: README.md  chunking_strategies_demo.py  document_cleaning_example.py  hybrid_chunking_example.py  triple_hybrid_example.py
scripts/: cleanup_old_data.sh  fast_search.py  index_pdfs.py  index_pubmed_data.py  index_pubmed_new.py  process_with_advanced_chunking.py  qdrant_setup.sh  test_qdrant_connection.py  verify_paths.py
scripts/runners/: run_app.sh  run_app_with_upload.sh  run_pdf_manager.sh  run_tests.sh  start_qdrant.sh  test_with_uv.sh
scripts/utils/: test_pdf_processing.py  verify_installation.py
src/: __init__.py  database_manager.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  pipeline.py  rag_system.py
src/data/: dataset_downloader.py  download_and_prepare.py  kaggle_downloader.py  kagglehub_downloader.py  pubmed_processor.py  pubmed_processor_tsv.py
src/processing/: __init__.py  advanced_chunking.py  document_cleaner.py  document_processor.py  hybrid_chunking.py  pdf_processor.py
src/retrieval/: __init__.py  base_rag.py  enhanced_rag.py
src/storage/: __init__.py  database_manager.py  vector_store.py
test_documents/: deep_learning_guide.md  machine_learning_basics.md  nlp_techniques.txt
tests/: __init__.py  conftest.py  test_app_imports.py  test_app_ready.py  test_document_search.py  test_pdf_processor.py  test_pubmed_search.py  test_setup.py  test_streamlit_app.py  test_vector_operations.py  test_visual_controls.py
